Changed artile tag to main tag. updated image alt attributes.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,10 +24,10 @@
             </ul>
         </nav>
     </header>
-    <img src="./assets/images/digital-marketing-meeting.jpg" alt="People working" class="hero">
-    <article>
+    <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four people collaborating around a conference table" class="hero">
+    <main>
         <section id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="workspace" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Workspace setup with a computer, notebook, pens, and coffee" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -41,13 +41,13 @@
             </p>
         </section>
         <section id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="a group using social media" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="a group sitting around a table using social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </article>
+    </main>
     <aside>
         <section>
             <h3>Lead Generation</h3>
